--- a/Vistaaa/Views/AdvertisementPage.xaml
+++ b/Vistaaa/Views/AdvertisementPage.xaml
@@ -13,7 +13,12 @@
             <VerticalStackLayout>
                 <Grid HeightRequest="250" BackgroundColor="Gray">
                     <maps:Map x:Name="map"/>
-                    <Label Text="aa" BackgroundColor="Orange" VerticalOptions="Start" HorizontalOptions="End"/>
+                    <Border Padding="10" BackgroundColor="Orange" VerticalOptions="Start" HorizontalOptions="End" Margin="0, 10, 30, 0" StrokeThickness="0">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="15"/>
+                        </Border.StrokeShape>
+                        <Label Text="aa" />
+                    </Border>
                 </Grid>
                 <VerticalStackLayout MaximumWidthRequest="1200" Padding="15" TranslationY="-25">
                     <Border StrokeThickness="0" BackgroundColor="#1E90FF" Padding="15" >
@@ -69,7 +74,6 @@
                                     </Label.FormattedText>
                                 </Label>
                             </Border>
-                            
                         </VerticalStackLayout>
                     </Border>
                     <Border StrokeThickness="0" BackgroundColor="White" Margin="0, 20, 0, 0">
@@ -83,7 +87,7 @@
                 </VerticalStackLayout>
             </VerticalStackLayout>
         </ScrollView>
-        <StackLayout Grid.Row="1" Padding="15" Spacing="10">
+        <StackLayout Grid.Row="1" Padding="15" Spacing="10" Style="{StaticResource gradientFooter}">
             <Label x:Name="expiredAdvertisementLabel" HorizontalTextAlignment="Center" IsVisible="False" Text="Opcje aplikowania i zapisywania są wyłączone, ponieważ termin ważności tego ogłoszenia już się skończył." FontFamily="SignikaNegative" FontSize="18"/>
             <FlexLayout JustifyContent="Center" x:Name="advertisementButtonsFlexLayout">
                 <Button x:Name="applyButton" FontFamily="SignikaNegative" Margin="0, 0, 10, 0" Text="Aplikuj" FlexLayout.Shrink="1" FlexLayout.Basis="350" TextColor="White" FontAttributes="Bold" FontSize="18" CharacterSpacing="1" CornerRadius="20" BackgroundColor="SeaGreen" Clicked="ApplyButton_Clicked"/>
