Improved adding and modifying advertisements, fixed DatePicker alignment and sessions

--- a/Vistaaa/Controls/ProfileView.xaml
+++ b/Vistaaa/Controls/ProfileView.xaml
@@ -30,6 +30,7 @@
         
         <ScrollView>
             <FlexLayout MaximumWidthRequest="1200">
+                <Button Text="Wybierz" Clicked="FilePickerButton_Clicked" />
             </FlexLayout>
         </ScrollView>
     </VerticalStackLayout>
